Adding partials and new items for bands page

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,13 +1,18 @@
 @import "variables";
-nav{
-  background-color:#000;
-  padding-right:30px;
+nav.main-nav{
   border-bottom: 1px solid white;
+  background-image:url('../images/YoungAmericansLogo.png');
+  background-position:15px;
+  background-repeat:no-repeat;
+  background-size: 176px 87px;
+  height: 115px;
+  padding: 0 0 30px 30px;
+
 
   ul{
     list-style-type:none;
     display:flex;
-    margin-top:26px;
+    margin-top:48px;
 
     li{
       display:inline-block;
