First stab at site complete

--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="row page-section-no-border">
-    <div class="back-to-top-link">
+    <div id="scroll-to-top-link" class="back-to-top-link">
         <span class="arrow">></span>
         <span class="top-text">TOP</span>
     </div>
@@ -7,10 +7,10 @@
     <nav class="col-xs-12 footer-nav">
         <ul>
             <li><a href="/">HOME</a></li>
-            <li><a href>THE BAND</a></li>
-            <li><a>MEDIA</a></li>
-            <li ><a href>UPCOMING GIGS</a></li>
-            <li href><a href>CONTACT</a></li>
+            <li><a href="/band.html" href>THE BAND</a></li>
+            <li><a href="/media.html">MEDIA</a></li>
+            <li ><a href="/gigs.html" href>UPCOMING GIGS</a></li>
+            <li><a href="/contact.html">CONTACT</a></li>
         </ul>
     </nav>
     <div class="col-xs-12 so-me-links">
@@ -23,7 +23,7 @@
             </a>
         </nav>
     </div>
-    <div class="row footer-site-text">
+    <div class="col-xs-12 footer-site-text">
         <span class="inner">YOUNGAMERICANSBOWIE.COM</span>
     </div>
 </footer>
