--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -16,6 +16,10 @@ footer{
         padding-right:40px;
         font-size:20px;
 
+        @media screen and (max-width: 768px) {
+          display:block;
+        }
+
         a{
           color:@young-americans-red;
           font-weight:bold;
@@ -88,6 +92,10 @@ footer{
   .footer-site-text{
     font-size:29px;
     color:#FFF;
+
+    @media screen and (max-width: 768px) {
+     font-size:20px;
+    }
 
     text-transform: uppercase;
 
