--- a/src/less/index.less
+++ b/src/less/index.less
@@ -9,6 +9,15 @@
     background-position: center right;
     background-size:contain;
     height:100%;
+
+
+  }
+
+  @media screen and (max-width: 768px) {
+    .index-hero-right {
+      margin-top: 25px;
+      background-position: center;
+    }
   }
 
 
