--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,2 +1,19 @@
-@young-americans-red:#871B18;
+@young-americans-red:#FB3710;
 @young-americans-peach:#ffe7d6;
+@young-americans-yellow:#EFD240;
+
+.navListItem() {
+  font-family: "Montserrat","Source Sans Pro",sans-serif;
+}
+
+
+.navListItemLink(){
+    color:@young-americans-red;
+    font-weight:bold;
+
+    &:hover{
+      text-decoration:none;
+      color:@young-americans-red;
+      opacity:0.8;
+    }
+}
