--- a/src/less/band.less
+++ b/src/less/band.less
@@ -1,14 +1,59 @@
 .band-hero{
-  background-image:url("../images/BandImage.jpg");
-  background-size:cover;
+  //background-image:url("../images/BandImage.jpg");
   background-repeat:no-repeat;
-  height:504px;
-  background-position: left center;
+  height:499px;
+  background-position: center;
+  background-size: contain;
+  background-image:url("../images/BandImage.jpg");
+  border-top:1px solid #FFF;
 }
 
 .band-members {
   padding-bottom:30px;
   .band-members-description {
+
+    .band-member-image-wrapper{
+      position:relative;
+      &:hover {
+
+        .image-caption-wrapper{
+          visibility:visible;
+        }
+        .image-caption {
+          opacity: 1.0;
+        }
+      }
+
+    }
+
+    .image-caption-wrapper{
+      position: absolute;
+      top: auto;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 18px;
+      background: rgba(0, 0, 0,0.7);
+      max-height: 100%;
+      box-sizing: border-box;
+      overflow-y: auto;
+      font-size: 12px;
+      visibility:hidden;
+
+
+      .image-caption {
+
+        -webkit-transition: opacity 0.1s; /* Safari and Chrome */
+        -moz-transition: opacity 0.1s; /* Firefox 4 */
+        -ms-transition: opacity 0.1s; /* MSIE */
+        -o-transition: opacity 0.1s; /* Opera */
+        transition: opacity 0.1s;
+
+
+      }
+
+    }
+
     .band-members-descriptions-inner {
       max-width: 700px;
       margin: 0 auto;
@@ -17,6 +62,12 @@
 
     .band-member-text {
       margin-top: 15px;
+
+      p{
+        @media screen and (max-width: 768px) {
+          padding:0 30px 0 30px;
+        }
+      }
     }
   }
 }
