Minor cosmetic changes and adding facebook event and youtube link

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -17,6 +17,10 @@ body{
   overflow-x:hidden;
 }
 
+.text-center{
+  text-align:center;
+}
+
 .hero-header{
   text-shadow: 2px 1px 6px #FE0000;
   text-align:center;
