New favicon, new instagram link, logo now links to homepage, fixing briens links, hopefully fixing parllax image on homepage

--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -1,4 +1,5 @@
 <nav class="row main-nav">
+    <a title="Home" href="/" class="pull-left logo-link"></a>
     <div class="nav-right pull-right">
         <i id="toggle-mobile-nav" class="fa fa-bars white mobile-nav-toggle" aria-hidden="true"></i>
         <ul id="nav-list" class="nav-list">
