--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,12 +1,23 @@
 @import "variables";
 nav.main-nav{
   border-bottom: 1px solid white;
-  background-image:url('../images/YoungAmericansLogo.png');
-  background-position:15px;
-  background-repeat:no-repeat;
-  background-size: 176px 87px;
+  //background-image:url('../images/YoungAmericansLogo.png');
+  //background-position:15px;
+  //background-repeat:no-repeat;
+  //background-size: 176px 87px;
   height: 115px;
   padding: 0 0 30px 30px;
+
+  .logo-link{
+    display:block;
+    height:87px;
+    width:176px;
+    background-image:url('../images/YoungAmericansLogo.png');
+    background-repeat:no-repeat;
+    background-size: 176px 87px;
+   margin-top:12px;
+
+  }
 
   .mobile-nav-toggle{
     display:none;
