--- a/src/less/index.less
+++ b/src/less/index.less
@@ -61,11 +61,11 @@
 .index-secondary-hero{
 
   div {
-    background-image: url('../images/youngamericans.jpeg');
+    background-image: url(../images/youngamericans.jpeg);
     background-repeat: no-repeat;
-    background-position:  center;
-    background-size: cover;
-    height:360px;
+    background-position: center;
+    background-size: contain;
+    height: 390px;
     background-attachment: fixed;
   }
 }
