Fix small screen rendering issues with home page and mobile navigation

--- a/src/less/band.less
+++ b/src/less/band.less
@@ -48,6 +48,8 @@
         -ms-transition: opacity 0.1s; /* MSIE */
         -o-transition: opacity 0.1s; /* Opera */
         transition: opacity 0.1s;
+        -webkit-transition-timing-function: linear; /* Safari and Chrome */
+        transition-timing-function: linear;
 
 
       }
