--- a/src/less/index.less
+++ b/src/less/index.less
@@ -27,11 +27,19 @@
     justify-content: center;
     height: 100%;
     padding-left: 50px;
+
+    @media screen and (max-width: 768px) {
+      padding-left:0;
+    }
   }
 
 }
 
 .index-description{
+
+  .sample-song-list{
+    padding:0;
+  }
 
   .index-description-content {
     text-align: center;
