--- a/src/less/nav-menu.less
+++ b/src/less/nav-menu.less
@@ -10,6 +10,7 @@
   transform: translate3d(0, 0, 0);
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+  overflow-x:hidden;
 
   @media screen and (max-width: 768px) {
     &.show-nav{
