4/25/2017 Adding new media and images

--- a/src/less/media.less
+++ b/src/less/media.less
@@ -1,10 +1,9 @@
 .media-hero{
-  background-image:url("../images/MediaHero.jpg");
+  background-image:url("../images/BandImage.jpg");
   background-repeat:no-repeat;
-  height:459px;
+  height:300px;
   background-position:center;
   background-size: contain;
-  background-color:#C92404 !important;
   border-top:1px solid #FFF;
 }
 
