--- a/src/less/band.less
+++ b/src/less/band.less
@@ -1,10 +1,10 @@
 .band-hero{
   //background-image:url("../images/BandImage.jpg");
   background-repeat:no-repeat;
-  height:499px;
+  height:490px;
   background-position: center;
   background-size: contain;
-  background-image:url("../images/BandImage.jpg");
+  background-image:url("../images/BandImageNew.jpg");
   border-top:1px solid #FFF;
 }
 
