--- a/src/less/contact.less
+++ b/src/less/contact.less
@@ -1,5 +1,5 @@
 .contact-hero{
-  background-image:url("../images/ContactHero.jpg");
+  background-image:url("../images/MediaHero.jpg");
   background-repeat:no-repeat;
   height:379px;
   background-position:center;
