Website updates for 5/142017. Includes latest imagery

--- a/src/less/band.less
+++ b/src/less/band.less
@@ -1,11 +1,9 @@
 .band-hero{
-  //background-image:url("../images/BandImage.jpg");
   background-repeat:no-repeat;
-  height:490px;
+  height:667px;
   background-position: center;
   background-size: contain;
-  background-image:url("../images/BandImageNew.jpg");
-  border-top:1px solid #FFF;
+  background-image:url("../images/TheBand.jpg");
 }
 
 .band-members {
