--- a/src/less/contact.less
+++ b/src/less/contact.less
@@ -1,11 +1,10 @@
 .contact-hero{
-  background-image:url("../images/MediaHero.jpg");
+  background-image:url("../images/ContactHero.jpg");
   background-repeat:no-repeat;
-  height:379px;
+  height:667px;
   background-position:center;
   background-size: contain;
   text-align:center;
-  background-color:#C21D07 !important;
 
 }
 
