--- a/src/less/index.less
+++ b/src/less/index.less
@@ -23,7 +23,7 @@
 
   @media screen and (max-width: 500px) {
     .index-hero-right {
-      background-size: cover;
+     display:none;
     }
   }
 
@@ -43,6 +43,9 @@
 }
 
 .index-description{
+
+  border-top:1px solid #FFF;
+  border-bottom:1px solid #FFF;
 
   .sample-song-list{
     padding:0;
@@ -76,15 +79,14 @@
 .index-secondary-hero{
 
   div {
-    background-image: url(../images/youngamericans.jpeg);
+    background-image: url(../images/IndexHero.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    height: 390px;
+    height: 667px;
     background-attachment: fixed;
 
     @media screen and (max-width: 500px) {
-      background-image: url(../images/youngamericans_mobile.jpg);
       background-position: center center;
       background-size:cover;
       background-attachment:initial;
