--- a/src/less/media.less
+++ b/src/less/media.less
@@ -1,10 +1,9 @@
 .media-hero{
-  background-image:url("../images/BandImage.jpg");
+  background-image:url("../images/Media.jpg");
   background-repeat:no-repeat;
-  height:300px;
+  height:667px;
   background-position:center;
   background-size: contain;
-  border-top:1px solid #FFF;
 }
 
 .media-container{
