--- a/src/less/media.less
+++ b/src/less/media.less
@@ -1,14 +1,80 @@
+@import "variables";
+
 .media-hero{
-  background-image:url("../images/Media.jpg");
-  background-repeat:no-repeat;
-  height:667px;
-  background-position:center;
-  background-size: contain;
+  padding-bottom:30px;
+
+  .photo-disclaimer{
+    text-align:center;
+  }
+
+#media-gallery-slider{
+  max-width:1000px;
+  margin:0 auto;
+
+  .slick-prev{
+    left:-25px;
+
+    @media screen and (max-width: 1190px) {
+      margin-left:25px;
+    }
+
+  }
+
+  .slick-next{
+    right:-25px;
+
+    @media screen and (max-width: 1190px) {
+      margin-right:25px;
+    }
+  }
+
+  .slick-prev,.slick-next{
+    font-size: 20px;
+    position: absolute;
+    display: block;
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    background-color: @young-americans-red;
+    top: 200px;
+    margin-top: -45px;
+    border-radius:50%;
+    border: none;
+    z-index: 2;
+    color:#fff;
+    transition: all .2s ease-in-out;
+
+    @media screen and (max-width: 768px) {
+      font-size:10px;
+      width:30px;
+      height:30px;
+    }
+
+    &:hover{
+      height:80px;
+      width:80px;
+      font-size:30px;
+
+      @media screen and (max-width: 768px) {
+        font-size:20px;
+        width:40px;
+        height:40px;
+      }
+    }
+
+
+
+  }
+}
+
+.media-image-wrapper{
+  max-width:1000px;
+}
 }
 
 .media-container{
   text-align:center;
-  padding:30px 0 30px 0;
+  padding:15px 0 30px 0;
   max-width:792px;
   margin:0 auto;
 
