Adding review on homepage

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -76,6 +76,7 @@
   }
 }
 
+
 .index-secondary-hero{
 
   div {
@@ -92,4 +93,10 @@
       background-attachment:initial;
     }
   }
+}
+
+.index-reviews {
+  border-top:1px solid #FFF;
+  border-bottom:1px solid #FFF;
+  padding-bottom:50px;
 }
