--- a/src/less/band.less
+++ b/src/less/band.less
@@ -1,13 +1,18 @@
 .band-hero{
   background-repeat:no-repeat;
-  height:667px;
+  height:628px;
   background-position: center;
   background-size: contain;
+  background-color: #FDFCF7 !important;
   background-image:url("../images/TheBand.jpg");
 }
 
 .band-members {
   padding-bottom:30px;
+
+  .band-member-image{
+    border-radius: 50%;
+  }
   .band-members-description {
 
     .band-member-image-wrapper{
