--- a/src/less/gigs.less
+++ b/src/less/gigs.less
@@ -4,7 +4,7 @@
   background-repeat:no-repeat;
   height:667px;
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   text-align:center;
   background-image:url("../images/UpcomingGigsHero.jpg");
 }
