--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,3 +1,13 @@
+.home-hero {
+  background-repeat:no-repeat;
+  height:734px;
+  background-size: contain;
+  background-position: center;
+  background-color: white !important;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  background-image:url("../images/HomeHero.jpg");
+}
 
 .index-hero{
 
@@ -9,8 +19,6 @@
     background-position: center right;
     background-size:contain;
     height:100%;
-
-
   }
 
   @media screen and (max-width: 768px) {
