New Nigs, New Slogan, Some CSS - 2/14/2020

--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -4,6 +4,9 @@
         <span class="top-text">TOP</span>
     </div>
     <img class="footer-logo" src="images/YoungAmericansLogo.png" alt="The Young Americans"/>
+    <div class="col-xs-12 footer-band-description">
+        BOSTON'S DAVID BOWIE TRIBUTE BAND
+    </div>
     <nav class="col-xs-12 footer-nav">
         <ul>
             <li><a href="/">HOME</a></li>
