--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -1,5 +1,6 @@
 <nav class="row main-nav">
     <a title="Home" href="/" class="pull-left logo-link"></a>
+    <span class="header-band-description hidden-xs">BOSTON'S DAVID BOWIE TRIBUTE BAND</span>
     <div class="nav-right pull-right">
         <i id="toggle-mobile-nav" class="fa fa-bars white mobile-nav-toggle" aria-hidden="true"></i>
         <ul id="nav-list" class="nav-list">
