--- a/src/less/index.less
+++ b/src/less/index.less
@@ -19,6 +19,10 @@
     background-position: center right;
     background-size:contain;
     height:100%;
+
+    @media only screen and (max-width: 768px) {
+      display: none;
+    }
   }
 
   @media screen and (max-width: 768px) {
