--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -34,6 +34,13 @@ footer{
     }
   }
 
+  .footer-band-description {
+    font-size:20px;
+    text-align:center;
+    font-weight: bold;
+    color:@young-americans-red;
+  }
+
   .back-to-top-link{
     display: block;
     z-index: 10;
